multi-cont-deploy/manifests/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deplyment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: server
          image: stylerhun/multi-server
          ports:
            - containerPort: 5000
